--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: >
   A simple menu (picker) that works on the command line. Works on Linux,
   Mac and Windows. Supports choosing by arrows on ANSI terminals.
 version: 0.3.0-nullsafety.0
-homepage: https://github.com/filiph/cli_menu
+homepage: https://github.com/emanuel-braz/cli_menu.git
 
 environment:
   sdk: '>=2.12.0-0 <3.0.0'
